Paginering av søk som det er gjort i økonomiportalen
