# src/main/kotlin/no/nav/sokos/oppdrag/attestasjon/api/model/OppdragsRequest.kt
@@ -9,4 +9,5 @@ data class OppdragsRequest(
     val kodeFagGruppe: String? = null,
     val kodeFagOmraade: String? = null,
     val attestert: Boolean? = null,
+    val lastOppdragsId: Int? = null,
 )
