# src/main/resources/openapi/attestasjon-v1-swagger.yaml
@@ -174,6 +174,11 @@ components:
           type: boolean
           example: true
           nullable: true
+        lastOppdragsId:
+          type: integer
+          example: 12345678
+          description: The last oppdragsid previously viewed in Attestasjon for use when fetching next page of search results
+          nullable: true
 
     AttestasjonRequest:
       type: object
